@@ -1,6 +1,6 @@
 Metadata-Version: 1.2
 Name: reahl-dev
-Version: 4.0.2
+Version: 4.1.0
 Summary: The core Reahl development tools.
 Home-page: http://www.reahl.org
 Maintainer: Iwan Vosloo
